@startuml

class User {
}


class ProductDTO {
    + id?: number
    + producer: string
    + name: string
    + unit: string
    + amout: number
    + kcal: number
    + protein: number
    + carbohydrates: number
    + fats: number
    + creatorId: number
}

class ProductModification {
    + userId: number
    + product: ProductDTO
}
ProductModification --* ProductDTO

class ProductDeletion {
    + userId: number
    + productId: number
}

class ProductController {
    + findProductBy(searchText: string, userId: number): Promise<ProductDTO[]>
    + addProduct(product: ProductDTO): Promise<ProductDTO>
    + modifyProduct(product: ProductModification): Promise<ProductDTO>
    + deleteProduct(product: ProductDeletion): Promise<void>
}
ProductController --> ProductService

class UsersRepository {
}

class ProductToDTOConverter {
    + convertProductc(product: Product): ProductDTO
    + convertProducts(product: Product[]): ProductDTO[]
}

class ProductService {
    + findProductBy(searchText: string): Promise<ProductDTO[]>
    + findProductsByUserId(userId: number): Promise<ProductDTO[]>
    + addProduct(product: ProductDTO): Promise<ProductDTO>
    + modifyProduct(product: ProductModification): Promise<ProductDTO>
    + deleteProduct(product: ProductDeletion): Promise<void>
}
ProductService --> ProductRepository
ProductService --> UsersRepository
ProductService --> ProductToDTOConverter
ProductService --* ProductDTO
ProductService --* ProductDeletion
ProductService --* ProductModification

class ProductRepository {
    + findProductBy(searchText: string): Promise<Product[]>
    + findProductsBy(userId: number): Promise<Product[]>
    + add(product: ProductDTO): Promise<Product>
    + update(product: ProductDTO): Promise<Product>
    + delete(id: number): Promise<void>
}
ProductRepository --* Product
ProductRepository --> UsersRepository

class Product {
    + id: number
    + producer: string
    + name: string
    + unit: string
    + amount: number
    + kcal: number
    + protein: number
    + carbohydrates: number
    + fats: number
    + creator: User
}
Product --* User

class UserProductModification {
    + userId: number
    + userProduct: UserProductDTO
}
UserProductModification --* UserProductDTO

class UserProductDeletion {
    + userId: number
    + userProductId: number
}

class UserProductsByDateDTO{
    + userId: number
    + date: Date
}

class UserProductsByDateRangeDTO{
    + userId: number
    + start: Date
    + end: Date
}

class UserProductByDate {
    + date: Date
    + userProducts UserProductDTO[]
}
UserProductByDate --* UserProductDTO

class UserProductDTO {
    + id?: number
    + product: ProductDTO
    + amount: number
    + date?: Date
    + mealTimeType: MealEatTimeType
    + userId: number
}
UserProductDTO --* ProductDTO

class UserProductController {
    + addUserProduct(userProduct: UserProductDTO): Promise<UserProductDTO>
    + modifyUserProduct(userProduct: UserProductModification): Promise<UserProductDTO>
    + findProductByDate(date: UserProductsByDateDTO): Promise<UserProductDTO[]>
    + findProductByDateRange(date: UserProductsByDateRangeDTO): Promise<UserProductDTO[]>
    + deleteUserProduct(userProduct: UserProductDeletion): Promise<void>
}
UserProductController --> UserProductService
UserProductController --> UserProductDTO
UserProductController --> UserProductDeletion
UserProductController --> UserProductDeletion
UserProductController --* UserProductsByDateDTO
UserProductController --* UserProductsByDateRangeDTO

class UserProductService {
    + addUserProduct(userProduct: UserProductDTO): Promise<UserProductDTO>
    + modifyUserProduct(userProduct: UserProductModification): Promise<UserProductDTO>
    + findProductByDate(date: UserProductsByDateDTO): Promise<UserProductDTO[]>
    + findProductByDateRange(date: UserProductsByDateRangeDTO): Promise<UserProductDTO[]>
    + deleteUserProduct(userProduct: UserProductDeletion): Promise<void>
}
UserProductService --> UserProductRepository
UserProductService --> ProductService
UserProductService --* UserProductDTO
UserProductService --* UserProductDeletion
UserProductService --* UserProductModification
UserProductService --* UserProductByDate
UserProductService --* UserProductsByDateDTO
UserProductService --* UserProductsByDateRangeDTO

class UserProductRepository {
    + findUserProductByDate(date: UserProductsByDateDTO): Promise<UserProduct[]>
    + findUserProductByDateRange(date: UserProductsByDateRangeDTO): Promise<UserProduct[]>
    + add(userProduct: UserProductDTO): Promise<UserProduct>
    + update(userProduct: UserProductDTO): Promise<UserProduct>
    + delete(id: number): Promise<void>
}
UserProductRepository --* UserProduct
UserProductRepository --* UserProductsByDateDTO

enum MealEatTimeType {
    BREAKFAST
    LUNCH
    DINNER
    SUPPER
}

class UserProduct {
    + id: number
    + product: Product
    + amount: number
    + date: Date
    + mealTimeType: MealEatTimeType
    + user: User
}
UserProduct --* User
UserProduct --* Product
UserProduct --* MealEatTimeType

@enduml